--- a/components/Octocat.module.css
+++ b/components/Octocat.module.css
@@ -1,26 +1,26 @@
 .octocat {
-    @apply absolute border-0 top-0 right-0;
+  @apply absolute top-0 right-0 border-0;
 }
 
 .octocat:hover .octocatArm {
-    animation: octocatWave 560ms ease-in-out;
+  animation: octocatWave 560ms ease-in-out;
 }
 
 .octocatArm {
-    transform-origin: 130px 106px;
+  transform-origin: 130px 106px;
 }
 
 @keyframes octocatWave {
-    0%,
-    100% {
-        transform: rotate(0);
-    }
-    20%,
-    60% {
-        transform: rotate(-25deg);
-    }
-    40%,
-    80% {
-        transform: rotate(10deg);
-    }
+  0%,
+  100% {
+    transform: rotate(0);
+  }
+  20%,
+  60% {
+    transform: rotate(-25deg);
+  }
+  40%,
+  80% {
+    transform: rotate(10deg);
+  }
 }
