feat: style scrollbar for webkit

--- a/styles/globals.css
+++ b/styles/globals.css
@@ -2,6 +2,16 @@
 @tailwind components;
 @tailwind utilities;
 
+@layer base {
+  ::-webkit-scrollbar {
+    @apply w-1 bg-transparent;
+  }
+
+  ::-webkit-scrollbar-thumb {
+    @apply rounded-full bg-pink;
+  }
+}
+
 @layer components {
   .index-container {
     animation: index-gradient-animation 30s ease infinite;
