--- a/styles/globals.css
+++ b/styles/globals.css
@@ -8,40 +8,6 @@
   }
 
   ::-webkit-scrollbar-thumb {
-    @apply rounded-full bg-pink;
-  }
-}
-
-@layer components {
-  .index-container {
-    animation: index-gradient-animation 30s ease infinite;
-    background: linear-gradient(270deg, #45dce4, #bd85ea, #ea858d);
-    background-size: 600% 600%;
-    @apply flex h-screen flex-col items-center justify-center;
-  }
-
-  .index-logo {
-    font-family: 'Lobster', cursive;
-    background: linear-gradient(
-      270deg,
-      hsl(206, 100%, 20%),
-      hsl(289, 100%, 20%),
-      hsl(36, 100%, 20%)
-    );
-    background-size: 600% 600%;
-    animation: index-gradient-animation 30s ease infinite;
-    @apply bg-clip-text p-8 text-6xl text-transparent lg:text-8xl;
-  }
-
-  @keyframes index-gradient-animation {
-    0% {
-      background-position: 0 74%;
-    }
-    50% {
-      background-position: 100% 27%;
-    }
-    100% {
-      background-position: 0 74%;
-    }
+    @apply bg-pink;
   }
 }
